task2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stategroup
Rule 2     stategroup -> stategroup statement
Rule 3     stategroup -> statement
Rule 4     statement -> declaration SEMICOLON NL
Rule 5     statement -> assignment SEMICOLON NL
Rule 6     statement -> while NL
Rule 7     statement -> zero NL
Rule 8     statement -> function NL
Rule 9     statement -> operator SEMICOLON NL
Rule 10    statement -> RETURN expression SEMICOLON NL
Rule 11    statement -> empty NL
Rule 12    statement -> error
Rule 13    declaration -> type vars
Rule 14    declaration -> type error
Rule 15    vars -> NAME COMMA vars
Rule 16    vars -> assignment_var COMMA vars
Rule 17    vars -> NAME
Rule 18    vars -> assignment_var
Rule 19    assignment_var -> variable ASSIGNMENT expression
Rule 20    assignment -> assignment_var
Rule 21    assignment -> pointer ASSIGNMENT expression
Rule 22    assignment -> variable ASSIGNMENT error
Rule 23    pointer -> STAR NAME
Rule 24    pointer -> STAR OBRACKET expression CBRACKET
Rule 25    pointer -> AMPERSAND NAME
Rule 26    pointer -> AMPERSAND OBRACKET expression CBRACKET
Rule 27    variable -> NAME
Rule 28    variable -> variable index
Rule 29    index -> OSQBRACKET expression CSQBRACKET index
Rule 30    index -> OSQBRACKET expression CSQBRACKET
Rule 31    type -> VALUE
Rule 32    type -> CONST VALUE
Rule 33    type -> POINTER expr_type
Rule 34    type -> CONST POINTER expr_type
Rule 35    type -> POINTER CONST expr_type
Rule 36    type -> CONST POINTER CONST expr_type
Rule 37    type -> ARRAYOF expr_type
Rule 38    type -> CONST ARRAYOF expr_type
Rule 39    expr_type -> <empty>
Rule 40    expr_type -> VALUE
Rule 41    expr_type -> POINTER expr_type
Rule 42    expr_type -> ARRAYOF expr_type
Rule 43    expression -> variable
Rule 44    expression -> al_expression
Rule 45    expression -> function_call
Rule 46    expression -> SIZEOF OBRACKET variable CBRACKET
Rule 47    al_expression -> expression PLUS expression
Rule 48    al_expression -> expression MINUS expression
Rule 49    al_expression -> expression PERCENT expression
Rule 50    al_expression -> expression STAR expression
Rule 51    al_expression -> expression SLASH expression
Rule 52    al_expression -> STAR expression
Rule 53    al_expression -> AMPERSAND expression
Rule 54    al_expression -> expression NOTGREATER expression
Rule 55    al_expression -> expression NOTLESS expression
Rule 56    al_expression -> expression NOTEQ expression
Rule 57    al_expression -> NUMBER
Rule 58    al_expression -> OBRACKET al_expression CBRACKET
Rule 59    operator -> TOP SEMICOLON
Rule 60    operator -> BOTTOM SEMICOLON
Rule 61    operator -> LEFT SEMICOLON
Rule 62    operator -> RIGHT SEMICOLON
Rule 63    operator -> PORTAL SEMICOLON
Rule 64    operator -> TELEPORT SEMICOLON
Rule 65    operator -> BREAK SEMICOLON
Rule 66    while -> while FINISH OFBRACKET NL stategroup CFBRACKET
Rule 67    while -> WHILE OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
Rule 68    zero -> ZERO OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
Rule 69    zero -> NOTZERO OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
Rule 70    zero -> ZERO OBRACKET expression CBRACKET NL statement
Rule 71    zero -> NOTZERO OBRACKET expression CBRACKET NL statement
Rule 72    function -> type funcname OBRACKET parameters CBRACKET OFBRACKET NL stategroup CFBRACKET
Rule 73    function -> type funcname OBRACKET CBRACKET OFBRACKET NL stategroup CFBRACKET
Rule 74    funcname -> MAIN
Rule 75    funcname -> NAME
Rule 76    function_call -> NAME OBRACKET call_parameters CBRACKET
Rule 77    call_parameters -> call_parameters COMMA call_vars
Rule 78    call_parameters -> call_vars
Rule 79    call_vars -> vars
Rule 80    call_vars -> expression
Rule 81    function -> type error
Rule 82    parameters -> parameters COMMA parameter
Rule 83    parameters -> parameter
Rule 84    parameter -> type NAME
Rule 85    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 25 26 53
ARRAYOF              : 37 38 42
ASSIGNMENT           : 19 21 22
BOTTOM               : 60
BREAK                : 65
CBRACKET             : 24 26 46 58 67 68 69 70 71 72 73 76
CFBRACKET            : 66 67 68 69 72 73
COMMA                : 15 16 77 82
CONST                : 32 34 35 36 36 38
CSQBRACKET           : 29 30
FINISH               : 66
LEFT                 : 61
MAIN                 : 74
MINUS                : 48
NAME                 : 15 17 23 25 27 75 76 84
NL                   : 4 5 6 7 8 9 10 11 66 67 68 69 70 71 72 73
NOTEQ                : 56
NOTGREATER           : 54
NOTLESS              : 55
NOTZERO              : 69 71
NUMBER               : 57
OBRACKET             : 24 26 46 58 67 68 69 70 71 72 73 76
OFBRACKET            : 66 67 68 69 72 73
OSQBRACKET           : 29 30
PERCENT              : 49
PLUS                 : 47
POINTER              : 33 34 35 36 41
PORTAL               : 63
RETURN               : 10
RIGHT                : 62
SEMICOLON            : 4 5 9 10 59 60 61 62 63 64 65
SIZEOF               : 46
SLASH                : 51
STAR                 : 23 24 50 52
TELEPORT             : 64
TOP                  : 59
VALUE                : 31 32 40
WHILE                : 67
ZERO                 : 68 70
error                : 12 14 22 81

Nonterminals, with rules where they appear

al_expression        : 44 58
assignment           : 5
assignment_var       : 16 18 20
call_parameters      : 76 77
call_vars            : 77 78
declaration          : 4
empty                : 11
expr_type            : 33 34 35 36 37 38 41 42
expression           : 10 19 21 24 26 29 30 47 47 48 48 49 49 50 50 51 51 52 53 54 54 55 55 56 56 67 68 69 70 71 80
funcname             : 72 73
function             : 8
function_call        : 45
index                : 28 29
operator             : 9
parameter            : 82 83
parameters           : 72 82
pointer              : 21
program              : 0
stategroup           : 1 2 66 67 68 69 72 73
statement            : 2 3 70 71
type                 : 13 14 72 73 81 84
variable             : 19 22 28 43 46
vars                 : 13 15 16 79
while                : 6 66
zero                 : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stategroup
    (2) stategroup -> . stategroup statement
    (3) stategroup -> . statement
    (4) statement -> . declaration SEMICOLON NL
    (5) statement -> . assignment SEMICOLON NL
    (6) statement -> . while NL
    (7) statement -> . zero NL
    (8) statement -> . function NL
    (9) statement -> . operator SEMICOLON NL
    (10) statement -> . RETURN expression SEMICOLON NL
    (11) statement -> . empty NL
    (12) statement -> . error
    (13) declaration -> . type vars
    (14) declaration -> . type error
    (20) assignment -> . assignment_var
    (21) assignment -> . pointer ASSIGNMENT expression
    (22) assignment -> . variable ASSIGNMENT error
    (66) while -> . while FINISH OFBRACKET NL stategroup CFBRACKET
    (67) while -> . WHILE OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
    (68) zero -> . ZERO OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
    (69) zero -> . NOTZERO OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
    (70) zero -> . ZERO OBRACKET expression CBRACKET NL statement
    (71) zero -> . NOTZERO OBRACKET expression CBRACKET NL statement
    (72) function -> . type funcname OBRACKET parameters CBRACKET OFBRACKET NL stategroup CFBRACKET
    (73) function -> . type funcname OBRACKET CBRACKET OFBRACKET NL stategroup CFBRACKET
    (81) function -> . type error
    (59) operator -> . TOP SEMICOLON
    (60) operator -> . BOTTOM SEMICOLON
    (61) operator -> . LEFT SEMICOLON
    (62) operator -> . RIGHT SEMICOLON
    (63) operator -> . PORTAL SEMICOLON
    (64) operator -> . TELEPORT SEMICOLON
    (65) operator -> . BREAK SEMICOLON
    (85) empty -> .
    (31) type -> . VALUE
    (32) type -> . CONST VALUE
    (33) type -> . POINTER expr_type
    (34) type -> . CONST POINTER expr_type
    (35) type -> . POINTER CONST expr_type
    (36) type -> . CONST POINTER CONST expr_type
    (37) type -> . ARRAYOF expr_type
    (38) type -> . CONST ARRAYOF expr_type
    (19) assignment_var -> . variable ASSIGNMENT expression
    (23) pointer -> . STAR NAME
    (24) pointer -> . STAR OBRACKET expression CBRACKET
    (25) pointer -> . AMPERSAND NAME
    (26) pointer -> . AMPERSAND OBRACKET expression CBRACKET
    (27) variable -> . NAME
    (28) variable -> . variable index

    RETURN          shift and go to state 10
    error           shift and go to state 12
    WHILE           shift and go to state 17
    ZERO            shift and go to state 18
    NOTZERO         shift and go to state 19
    TOP             shift and go to state 20
    BOTTOM          shift and go to state 21
    LEFT            shift and go to state 22
    RIGHT           shift and go to state 23
    PORTAL          shift and go to state 24
    TELEPORT        shift and go to state 25
    BREAK           shift and go to state 26
    NL              reduce using rule 85 (empty -> .)
    VALUE           shift and go to state 27
    CONST           shift and go to state 28
    POINTER         shift and go to state 29
    ARRAYOF         shift and go to state 30
    STAR            shift and go to state 31
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    program                        shift and go to state 1
    stategroup                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    zero                           shift and go to state 7
    function                       shift and go to state 8
    operator                       shift and go to state 9
    empty                          shift and go to state 11
    type                           shift and go to state 13
    assignment_var                 shift and go to state 14
    pointer                        shift and go to state 15
    variable                       shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> stategroup .
    (2) stategroup -> stategroup . statement
    (4) statement -> . declaration SEMICOLON NL
    (5) statement -> . assignment SEMICOLON NL
    (6) statement -> . while NL
    (7) statement -> . zero NL
    (8) statement -> . function NL
    (9) statement -> . operator SEMICOLON NL
    (10) statement -> . RETURN expression SEMICOLON NL
    (11) statement -> . empty NL
    (12) statement -> . error
    (13) declaration -> . type vars
    (14) declaration -> . type error
    (20) assignment -> . assignment_var
    (21) assignment -> . pointer ASSIGNMENT expression
    (22) assignment -> . variable ASSIGNMENT error
    (66) while -> . while FINISH OFBRACKET NL stategroup CFBRACKET
    (67) while -> . WHILE OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
    (68) zero -> . ZERO OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
    (69) zero -> . NOTZERO OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
    (70) zero -> . ZERO OBRACKET expression CBRACKET NL statement
    (71) zero -> . NOTZERO OBRACKET expression CBRACKET NL statement
    (72) function -> . type funcname OBRACKET parameters CBRACKET OFBRACKET NL stategroup CFBRACKET
    (73) function -> . type funcname OBRACKET CBRACKET OFBRACKET NL stategroup CFBRACKET
    (81) function -> . type error
    (59) operator -> . TOP SEMICOLON
    (60) operator -> . BOTTOM SEMICOLON
    (61) operator -> . LEFT SEMICOLON
    (62) operator -> . RIGHT SEMICOLON
    (63) operator -> . PORTAL SEMICOLON
    (64) operator -> . TELEPORT SEMICOLON
    (65) operator -> . BREAK SEMICOLON
    (85) empty -> .
    (31) type -> . VALUE
    (32) type -> . CONST VALUE
    (33) type -> . POINTER expr_type
    (34) type -> . CONST POINTER expr_type
    (35) type -> . POINTER CONST expr_type
    (36) type -> . CONST POINTER CONST expr_type
    (37) type -> . ARRAYOF expr_type
    (38) type -> . CONST ARRAYOF expr_type
    (19) assignment_var -> . variable ASSIGNMENT expression
    (23) pointer -> . STAR NAME
    (24) pointer -> . STAR OBRACKET expression CBRACKET
    (25) pointer -> . AMPERSAND NAME
    (26) pointer -> . AMPERSAND OBRACKET expression CBRACKET
    (27) variable -> . NAME
    (28) variable -> . variable index

    $end            reduce using rule 1 (program -> stategroup .)
    RETURN          shift and go to state 10
    error           shift and go to state 12
    WHILE           shift and go to state 17
    ZERO            shift and go to state 18
    NOTZERO         shift and go to state 19
    TOP             shift and go to state 20
    BOTTOM          shift and go to state 21
    LEFT            shift and go to state 22
    RIGHT           shift and go to state 23
    PORTAL          shift and go to state 24
    TELEPORT        shift and go to state 25
    BREAK           shift and go to state 26
    NL              reduce using rule 85 (empty -> .)
    VALUE           shift and go to state 27
    CONST           shift and go to state 28
    POINTER         shift and go to state 29
    ARRAYOF         shift and go to state 30
    STAR            shift and go to state 31
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    statement                      shift and go to state 34
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    zero                           shift and go to state 7
    function                       shift and go to state 8
    operator                       shift and go to state 9
    empty                          shift and go to state 11
    type                           shift and go to state 13
    assignment_var                 shift and go to state 14
    pointer                        shift and go to state 15
    variable                       shift and go to state 16

state 3

    (3) stategroup -> statement .

    RETURN          reduce using rule 3 (stategroup -> statement .)
    error           reduce using rule 3 (stategroup -> statement .)
    WHILE           reduce using rule 3 (stategroup -> statement .)
    ZERO            reduce using rule 3 (stategroup -> statement .)
    NOTZERO         reduce using rule 3 (stategroup -> statement .)
    TOP             reduce using rule 3 (stategroup -> statement .)
    BOTTOM          reduce using rule 3 (stategroup -> statement .)
    LEFT            reduce using rule 3 (stategroup -> statement .)
    RIGHT           reduce using rule 3 (stategroup -> statement .)
    PORTAL          reduce using rule 3 (stategroup -> statement .)
    TELEPORT        reduce using rule 3 (stategroup -> statement .)
    BREAK           reduce using rule 3 (stategroup -> statement .)
    VALUE           reduce using rule 3 (stategroup -> statement .)
    CONST           reduce using rule 3 (stategroup -> statement .)
    POINTER         reduce using rule 3 (stategroup -> statement .)
    ARRAYOF         reduce using rule 3 (stategroup -> statement .)
    STAR            reduce using rule 3 (stategroup -> statement .)
    AMPERSAND       reduce using rule 3 (stategroup -> statement .)
    NAME            reduce using rule 3 (stategroup -> statement .)
    NL              reduce using rule 3 (stategroup -> statement .)
    $end            reduce using rule 3 (stategroup -> statement .)
    CFBRACKET       reduce using rule 3 (stategroup -> statement .)


state 4

    (4) statement -> declaration . SEMICOLON NL

    SEMICOLON       shift and go to state 35


state 5

    (5) statement -> assignment . SEMICOLON NL

    SEMICOLON       shift and go to state 36


state 6

    (6) statement -> while . NL
    (66) while -> while . FINISH OFBRACKET NL stategroup CFBRACKET

    NL              shift and go to state 37
    FINISH          shift and go to state 38


state 7

    (7) statement -> zero . NL

    NL              shift and go to state 39


state 8

    (8) statement -> function . NL

    NL              shift and go to state 40


state 9

    (9) statement -> operator . SEMICOLON NL

    SEMICOLON       shift and go to state 41


state 10

    (10) statement -> RETURN . expression SEMICOLON NL
    (43) expression -> . variable
    (44) expression -> . al_expression
    (45) expression -> . function_call
    (46) expression -> . SIZEOF OBRACKET variable CBRACKET
    (27) variable -> . NAME
    (28) variable -> . variable index
    (47) al_expression -> . expression PLUS expression
    (48) al_expression -> . expression MINUS expression
    (49) al_expression -> . expression PERCENT expression
    (50) al_expression -> . expression STAR expression
    (51) al_expression -> . expression SLASH expression
    (52) al_expression -> . STAR expression
    (53) al_expression -> . AMPERSAND expression
    (54) al_expression -> . expression NOTGREATER expression
    (55) al_expression -> . expression NOTLESS expression
    (56) al_expression -> . expression NOTEQ expression
    (57) al_expression -> . NUMBER
    (58) al_expression -> . OBRACKET al_expression CBRACKET
    (76) function_call -> . NAME OBRACKET call_parameters CBRACKET

    SIZEOF          shift and go to state 46
    NAME            shift and go to state 48
    STAR            shift and go to state 49
    AMPERSAND       shift and go to state 50
    NUMBER          shift and go to state 51
    OBRACKET        shift and go to state 47

    expression                     shift and go to state 42
    variable                       shift and go to state 43
    al_expression                  shift and go to state 44
    function_call                  shift and go to state 45

state 11

    (11) statement -> empty . NL

    NL              shift and go to state 52


state 12

    (12) statement -> error .

    RETURN          reduce using rule 12 (statement -> error .)
    error           reduce using rule 12 (statement -> error .)
    WHILE           reduce using rule 12 (statement -> error .)
    ZERO            reduce using rule 12 (statement -> error .)
    NOTZERO         reduce using rule 12 (statement -> error .)
    TOP             reduce using rule 12 (statement -> error .)
    BOTTOM          reduce using rule 12 (statement -> error .)
    LEFT            reduce using rule 12 (statement -> error .)
    RIGHT           reduce using rule 12 (statement -> error .)
    PORTAL          reduce using rule 12 (statement -> error .)
    TELEPORT        reduce using rule 12 (statement -> error .)
    BREAK           reduce using rule 12 (statement -> error .)
    VALUE           reduce using rule 12 (statement -> error .)
    CONST           reduce using rule 12 (statement -> error .)
    POINTER         reduce using rule 12 (statement -> error .)
    ARRAYOF         reduce using rule 12 (statement -> error .)
    STAR            reduce using rule 12 (statement -> error .)
    AMPERSAND       reduce using rule 12 (statement -> error .)
    NAME            reduce using rule 12 (statement -> error .)
    NL              reduce using rule 12 (statement -> error .)
    $end            reduce using rule 12 (statement -> error .)
    CFBRACKET       reduce using rule 12 (statement -> error .)


state 13

    (13) declaration -> type . vars
    (14) declaration -> type . error
    (72) function -> type . funcname OBRACKET parameters CBRACKET OFBRACKET NL stategroup CFBRACKET
    (73) function -> type . funcname OBRACKET CBRACKET OFBRACKET NL stategroup CFBRACKET
    (81) function -> type . error
    (15) vars -> . NAME COMMA vars
    (16) vars -> . assignment_var COMMA vars
    (17) vars -> . NAME
    (18) vars -> . assignment_var
    (74) funcname -> . MAIN
    (75) funcname -> . NAME
    (19) assignment_var -> . variable ASSIGNMENT expression
    (27) variable -> . NAME
    (28) variable -> . variable index

    error           shift and go to state 54
    NAME            shift and go to state 56
    MAIN            shift and go to state 58

    vars                           shift and go to state 53
    funcname                       shift and go to state 55
    assignment_var                 shift and go to state 57
    variable                       shift and go to state 59

state 14

    (20) assignment -> assignment_var .

    SEMICOLON       reduce using rule 20 (assignment -> assignment_var .)


state 15

    (21) assignment -> pointer . ASSIGNMENT expression

    ASSIGNMENT      shift and go to state 60


state 16

    (22) assignment -> variable . ASSIGNMENT error
    (19) assignment_var -> variable . ASSIGNMENT expression
    (28) variable -> variable . index
    (29) index -> . OSQBRACKET expression CSQBRACKET index
    (30) index -> . OSQBRACKET expression CSQBRACKET

    ASSIGNMENT      shift and go to state 61
    OSQBRACKET      shift and go to state 63

    index                          shift and go to state 62

state 17

    (67) while -> WHILE . OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET

    OBRACKET        shift and go to state 64


state 18

    (68) zero -> ZERO . OBRACKET expression CBRACKET OFBRACKET NL stategroup CFBRACKET
    (70) zero -> ZERO . OBRACKET expression CBRACKET NL statement

    OBRACKET        shift and go to state 65


state 19
